--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,24 +1,64 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'blog/blog.css' %}">
 </head>
 
 
 
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="nav_bar container-fluid">
+    <a class="navbar-brand" href="{% url 'post_list' %}">Zumber</a>
+      <ul class="navbar-nav me-auto my-2 my-lg-0 ">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+      </ul>
+      <!--<form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>-->
+      {% if user.is_authenticated %}
+      <div class="dropdown">
+            <img src="https://cdn.pixabay.com/photo/2016/11/18/23/38/child-1837375_960_720.png"
+         class="user-image dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
 
-<a href="{% url 'post_new' %}">Create a new post</a>
 
-{% for post in posts %}
-    <small>{{ post.date }}</small>
-<a href="{% url 'post_detail' pk=post.pk %}"><h1>{{ post.title }}</h1></a>
-    <h3>{{ post.text }}</h3>
-{% endfor %}
-</body>
+  <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton1">
+    <li><a class="dropdown-item" href="{% url 'post_new' %}">Create a new blog</a></li>
+    <li><a class="dropdown-item" href="{% url 'post_draft_list' users_id=user.id %}">My draft list</a></li>
+    <li><a class="dropdown-item" href="">My blogs</a></li>
+    <li><hr class="dropdown-divider"></li>
+    <li><a class="dropdown-item" href="{% url 'logout' %}">logout</a></li>
+  </ul>
+
+    </div>
+      {% else %}
+      <a href="{% url 'login' %}" class="sign-in top-menu"><button class="btn btn ">Log-in</button></a>
+            <a href="{% url 'signup' %}" class="sign-up top-menu"><button class="btn btn-danger ">Sign-up</button></a>
+      {% endif %}
+</div>
+</nav>
+
+
+
+
+<div class="listing container">
+
+
+
+{% block content %} {% endblock %}
+
+
+    </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script></body>
 
 
 </html>
