--- a/blog/templates/blog/post_new.html
+++ b/blog/templates/blog/post_new.html
@@ -1,17 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'blog/base.html' %}
 
+
+{% block content %}
+{% load crispy_forms_tags %}
+<h1>Create a new post</h1>
 <form action="" method="post">
     {% csrf_token %}
-    {{ form }}
-    <button class="btn btn-primary" type="submit">create</button>
-
+    {{ form|crispy }}
+    <button class="btn btn-primary">Create</button>
 </form>
 
-</body>
-</html>
+{% endblock %}
+
