--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,12 +4,14 @@
 {% block content %}
 {% load crispy_forms_tags %}
 
+<div class="listing container">
+
 
 
 {{ post.title }}
 <h2>{{ post.text }}</h2>
 
-
+</div>
 
 {% endblock %}
 
