--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -4,6 +4,8 @@
 {% block content %}
 {% load crispy_forms_tags %}
 
+<div class="listing container">
+
 
 
   <div class="row">
@@ -26,7 +28,7 @@
   </div>
 
 
-
+</div>
 
 
 {% endblock %}
