--- a/blog/static/blog/blog.css
+++ b/blog/static/blog/blog.css
@@ -60,12 +60,24 @@ a {
     border:solid black 1px;
 }
 
+.profile-image {
+    height: 100px;
+    width: 100px;
+    border-radius: 40px;
+}
 
 .user-image {
     height: 50px;
     width: 50px;
     border-radius: 40px;
 }
+
+.user-nav-image {
+    height: 40px;
+    width: 40px;
+    border-radius: 40px;
+}
+
 
 .sign-up-form {
     text-align:center;
