--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -26,12 +26,13 @@
       </form>-->
       {% if user.is_authenticated %}
       <div class="dropdown">
-            <img src="https://cdn.pixabay.com/photo/2016/11/18/23/38/child-1837375_960_720.png"
-         class="user-image dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+          <img src="https://cdn.pixabay.com/photo/2016/11/18/23/38/child-1837375_960_720.png"
+         class="user-nav-image dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
 
 
   <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton1">
     <li><a class="dropdown-item" href="{% url 'post_new' %}">Create a new blog</a></li>
+    <li><a class="dropdown-item" href="{% url 'profile' pk=user.pk %}">My profile</a></li>
     <li><a class="dropdown-item" href="{% url 'post_draft_list' users_id=user.id %}">My draft list</a></li>
     <li><a class="dropdown-item" href="">My blogs</a></li>
     <li><hr class="dropdown-divider"></li>
@@ -49,14 +50,12 @@
 
 
 
-<div class="listing container">
-
 
 
 {% block content %} {% endblock %}
 
 
-    </div>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script></body>
 
