--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -5,6 +5,8 @@
 
 
 
+<div class="listing container">
+
 
 {% for post in posts %}
 <div class="content-section row">
@@ -27,6 +29,6 @@
 
 {% endfor %}
 
-
+</div>
 
 {% endblock %}
