--- a/blog/templates/blog/post_new.html
+++ b/blog/templates/blog/post_new.html
@@ -3,12 +3,18 @@
 
 {% block content %}
 {% load crispy_forms_tags %}
-<h1>Create a new post</h1>
-<form action="" method="post">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <button class="btn btn-primary">Create</button>
-</form>
+
+<div class="listing container">
+
+
+    <h1>Create a new post</h1>
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <button class="btn btn-primary">Create</button>
+    </form>
+
+</div>
 
 {% endblock %}
 
