--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -2,25 +2,30 @@
 
 
 {% block content %}
+{% load crispy_forms_tags %}
 
-
-<div class="content-section row">
-            <div class="col-1">
-            <img src="https://cdn.pixabay.com/photo/2016/11/18/23/38/child-1837375_960_720.png"
-         class="user-image">
-                </div>
-    <div class="col-11">
-        <div class="article-metadata">
-            <a  href="">{{user.username}}</a>
+<div class="listing container mt-3">
+    <div class="d-flex border p-8">
+        <img class="flex-shrink-0 mr-3 mt-3 rounded-circle profile-image" src="https://cdn.pixabay.com/photo/2016/11/18/23/38/child-1837375_960_720.png">
+        <div>
+            <h4> {{ user.username }} </h4>
+            <p class="text-secondary">{{ user.email }}</p>
         </div>
+    </div>
 
-        <a class="article-title " href=""><h1></h1></a>
-            <p class="article-content">{{ user.email }}</p>
+
+    <div class="content-section">
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+                <fieldset class="form-group">
+                    <legend class="border-bottom mb-4">Profile info</legend>
+                    <!-- {{ u_form|crispy }}
+                    {{ p_form|crispy }}-->
+                </fieldset>
+            <input type="submit" class="btn btn-primary" value="Update">
+        </form>
     </div>
 </div>
-
-
-
 
 
 
