--- a/user/templates/user/signup.html
+++ b/user/templates/user/signup.html
@@ -3,6 +3,10 @@
 
 {% block content %}
 {% load crispy_forms_tags %}
+
+<div class="listing container">
+
+
   <div class="row">
     <div class="sign-up-form col-sm">
 <form action="" method="post">
@@ -19,5 +23,7 @@
             </form>
     </div>
   </div>
+
+</div>
 {% endblock %}
 
