--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -17,7 +17,7 @@
     <div class="col-11">
         <div class="article-metadata">
             <a  href="">{{post.user}}</a>
-            <small class=" text-muted">{{ post.date }}</small>
+            <small class=" text-muted">{{ post.created }}</small>
         </div>
 
         <a class="article-title " href="{% url 'post_detail' pk=post.pk %}"><h1>{{ post.title }}</h1></a>
