updated ajax with icon

--- a/blog/static/blog/blog.css
+++ b/blog/static/blog/blog.css
@@ -138,13 +138,20 @@ color: white
 }
 
 .thumbs-up {
-    color: red;
+    color: blue;
+}
+.thumbs-down {
+    color: black;
 }
 
 .like {
     background-color: transparent !important;
 }
 
+.fas {
+    padding-left: 10px;
+
+}
 
 
 
