--- a/blog/static/blog/blog.css
+++ b/blog/static/blog/blog.css
@@ -32,6 +32,20 @@ a {
   margin-bottom: 20px;
 }
 
+.comments {
+    max-width: 600px;
+    margin: auto;
+    margin-bottom: 20px;
+}
+
+.comments-h3 {
+    padding-top: 80px;
+}
+
+.botm {
+    padding-bottom: 30px;
+}
+
 .comment-section {
  padding-bottom: 1px;
   margin-bottom: 4px;
@@ -69,6 +83,11 @@ a {
 .user-image {
     height: 50px;
     width: 50px;
+    border-radius: 40px;
+}
+.user-image-sm {
+    height: 20px;
+    width: 20px;
     border-radius: 40px;
 }
 
@@ -146,6 +165,7 @@ color: white
 
 .like {
     background-color: transparent !important;
+    border: solid black 0px;
 }
 
 .fas {
@@ -153,8 +173,29 @@ color: white
 
 }
 
+button a {
+    color: white;
+}
+button a:hover {
+    color: grey;
+}
 
 
+.dropdown-detail {
+    float: right;
+}
+
+.red {
+    color:red;
+
+}
 
 
+.fa-ellipsis-h {
+    color:black;
 
+}
+
+.h1-center {
+    text-align:center;
+}
