--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -8,32 +8,75 @@
 
     <div class="col-sm">
         <div class="article-metadata">
-            <a  href="">{{post.user}}</a>
+            <img src="https://cdn.pixabay.com/photo/2016/11/18/23/38/child-1837375_960_720.png" class="user-image-sm">
+            <a href="">{{post.user}}</a>
             <small class=" text-muted">{{ post.created }}</small>
+
+                <button class="like dropdown-detail" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-ellipsis-h"></i></button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                    <li><a class="dropdown-item" href="{% url 'post_update' pk=post.pk %}">Update post</a></li>
+                    <li><a class="dropdown-item" href="{% url 'post_publish' pk=post.pk %}">Publish post</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="red dropdown-item" href="{% url 'post_delete' pk=post.pk %}">Delete post</a></li>
+                </ul>
+
         </div>
 
-        <a class="article-title " href="{% url 'post_detail' pk=post.pk %}"><h1>{{ post.title }}</h1></a>
-            <p class="article-content">{{ post.text }}</p>
+        <h1 class="h1-center">{{ post.title }}</h1>
+            <p class=" article-content">{{ post.text }}</p>
     </div>
 
+    <h3 class="comments-h3">Comments</h3>
+    <hr>
+    <button  class="btn btn-secondary"><a href="{% url 'comment_new' pk=post.pk %}">add comment</a></button>
+    <br>
+    <br>
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    {% for comment in comments %}
 
-    <div class="content-section row">
+        {% if comment.approved %}
 
-    <div class="col-12">
-        <div class="article-metadata">
-            <a  href="">{{post.user}}</a>
-            <small class=" text-muted">{{ post.created }}</small>
+            <div class="comments content-section row">
+                <div class="col-sm">
+                    <div class="article-metadata">
+                        <img src="https://cdn.pixabay.com/photo/2016/11/18/23/38/child-1837375_960_720.png" class="user-image-sm">
+                        <a  href="">{{comment.author.username }}</a>
+                        {% if comment.updated is None %}
+                            <small class=" text-muted">{{ comment.created }}</small>
+                        {% else %}
+                            <small class=" text-muted">{{ comment.updated }} (edited)</small>
+                        {% endif %}
+                        {% if comment.author == request.user or post.user == request.user %}
+                            <a href="{% url 'comment_delete' pk=comment.id %}">del</a>
+                        {% endif %}
+                        {% if comment.author == request.user %}
+                            <a href="{% url 'comment_update' pk=comment.id %}">upd</a>
+                        {% endif %}
+                    </div>
+                        <p class="article-content">{{ comment.text }}</p>
+                </div>
         </div>
 
-            <p class="article-content">{{ post.text }}</p>
-    </div>
-</div>
+
+        {% endif %}
+    {% if not comment.approved and user.is_superuser or not comment.approved and post.user == request.user %}
+    <div class="comments content-section row">
+                <div class="col-sm">
+                    <div class="article-metadata">
+                        <img src="https://cdn.pixabay.com/photo/2016/11/18/23/38/child-1837375_960_720.png" class="user-image-sm">
+                        <a  href="">{{comment.author.username }}</a>
+                            <small class=" text-muted">{{ comment.created }}</small>
+                        <a href="{% url 'comment_delete' pk=comment.id %}">del</a>
+                        <a href="{% url 'comment_approve' pk=comment.id %}">approve</a>
+                    </div>
+                        <p class="article-content">{{ comment.text }}</p>
+                </div>
+        </div>
+        {% endif %}
+    {% endfor %}
+    {% if not comments %}
+    <p>No comments yet..</p>
+    {% endif %}
 </div>
 
 
