--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'blog/blog.css' %}">
+    <link rel="shortcut icon" href="#">
 </head>
 
 
@@ -36,7 +37,7 @@
     <li><a class="dropdown-item" href="{% url 'post_draft_list' users_id=user.id %}">My draft list</a></li>
     <li><a class="dropdown-item" href="{% url 'users_posts' users_id=user.id %}">My blogs</a></li>
     <li><hr class="dropdown-divider"></li>
-    <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+    <li><a class="dropdown-item" href="{% url 'logout' %}">Logout({{user}})</a></li>
   </ul>
 
     </div>
