--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -9,7 +9,7 @@
     <div class="col-sm">
         <div class="article-metadata">
             <img src="https://cdn.pixabay.com/photo/2016/11/18/23/38/child-1837375_960_720.png" class="user-image-sm">
-            <a href="">{{post.user}}</a>
+            <a href="{% url 'users_posts' users_id=post.user.id %}">{{post.user}}</a>
             <small class=" text-muted">{{ post.created }}</small>
 
                 <button class="like dropdown-detail" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-ellipsis-h"></i></button>
@@ -17,18 +17,42 @@
                     <li><a class="dropdown-item" href="{% url 'post_update' pk=post.pk %}">Update post</a></li>
                     <li><a class="dropdown-item" href="{% url 'post_publish' pk=post.pk %}">Publish post</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="red dropdown-item" href="{% url 'post_delete' pk=post.pk %}">Delete post</a></li>
+                    <li><a class="red dropdown-item" href="{% url 'post_delete' pk=post.pk %}" onclick="return confirm('Are you sure?')" >Delete post</a></li>
                 </ul>
 
         </div>
 
-        <h1 class="h1-center">{{ post.title }}</h1>
+        <h1 class="h1-center" >{{ post.title }}</h1>
             <p class=" article-content">{{ post.text }}</p>
     </div>
-
-    <h3 class="comments-h3">Comments</h3>
     <hr>
-    <button  class="btn btn-secondary"><a href="{% url 'comment_new' pk=post.pk %}">add comment</a></button>
+    <div class="col-12">
+        <div class="margins-c">
+        {% if post.number_of_likes == 1 %}
+            <div class="margins-l margins-top like-count{{ post.id }}">{{ post.number_of_likes }} like for this post</div>
+        {% else %}
+            <div class="margins-l margins-top like-count{{ post.id }}">{{ post.number_of_likes }} likes for this post</div>
+        {% endif %}
+        </div>
+        {% if user.is_authenticated %}
+                    <form action="{% url 'post_likes' %}" method="POST" class="like-form" id="{{ post.id }}">
+                        {% csrf_token %}
+                        <input type="hidden" name="post_id" value="{{ post.id }}">
+                        <button type="submit" name="post_id" value="{{ post.id }}" class='margins-l btn btn-outline-primary like-btn{{post.id}}'>
+                        {% if user not in post.likes.all %}
+                            <text class="thumbs-down" >Like</text><i class="thumbs-down fas fa-thumbs-up"></i>
+                        {% else %}
+                            <text>Unlike</text><i class="thumbs-up fas fa-thumbs-up"></i>
+                        {% endif %}
+                        </button>
+                    </form>
+                {% endif %}
+    </div>
+
+<hr>
+    <h3 class="comments-h3" id="comments_post">Comments</h3>
+    <hr>
+    <a href="{% url 'comment_new' pk=post.pk %}"><button  class="btn btn-secondary">add comment</button></a>
     <br>
     <br>
 
@@ -57,20 +81,20 @@
                 </div>
         </div>
 
-
         {% endif %}
-    {% if not comment.approved and user.is_superuser or not comment.approved and post.user == request.user %}
-    <div class="comments content-section row">
-                <div class="col-sm">
-                    <div class="article-metadata">
-                        <img src="https://cdn.pixabay.com/photo/2016/11/18/23/38/child-1837375_960_720.png" class="user-image-sm">
-                        <a  href="">{{comment.author.username }}</a>
+
+            {% if not comment.approved and user.is_superuser or not comment.approved and post.user == request.user %}
+                <div class="comments content-section row">
+                    <div class="col-sm">
+                        <div class="article-metadata">
+                            <img src="https://cdn.pixabay.com/photo/2016/11/18/23/38/child-1837375_960_720.png" class="user-image-sm">
+                            <a  href="">{{comment.author.username }}</a>
                             <small class=" text-muted">{{ comment.created }}</small>
-                        <a href="{% url 'comment_delete' pk=comment.id %}">del</a>
-                        <a href="{% url 'comment_approve' pk=comment.id %}">approve</a>
+                            <a href="{% url 'comment_delete' pk=comment.id %}">del</a>
+                            <a href="{% url 'comment_approve' pk=comment.id %}">approve</a>
+                        </div>
+                            <p class="article-content">{{ comment.text }}</p>
                     </div>
-                        <p class="article-content">{{ comment.text }}</p>
-                </div>
         </div>
         {% endif %}
     {% endfor %}
@@ -81,4 +105,71 @@
 
 
 {% endblock %}
+
+{% block scripts %}
+<script>
+    $( document ).ready(function() {
+         let display = false
+         $(".cmt_btn").click(function () {
+                if (display===false) {
+                    $(this).next(".comment-box").show("slow");
+                    display=true
+                } else {
+                    $(this).next(".comment-box").hide("slow");
+                    display=false
+                }
+            });
+
+            $('.like-form').submit(function(e){
+                e.preventDefault()
+
+                const post_id = $(this).attr('id')
+
+                const likeTest = $(`.like-btn${post_id}`).text()
+
+                const trim = $.trim(likeTest)
+                console.log(trim)
+                const url = $(this).attr('action')
+
+                let res;
+                const likes = $(`.like-count${post_id}`).text()
+                const trimCount = parseInt(likes)
+
+                $.ajax({
+                    type: 'POST',
+                    url: url,
+                    data: {
+                         'csrfmiddlewaretoken': $('input[name=csrfmiddlewaretoken]').val(),
+                         'post_id': post_id,
+                    },
+                    success: function(response) {
+                        if(trim == 'Unlike') {
+                            $(`.like-btn${post_id}`).text('Like').css({"color": "black" });
+                            $(`.like-btn${post_id}`).append('<i class="fas fa-thumbs-up"></i>')
+
+                            res = trimCount - 1
+                        } else {
+                            $(`.like-btn${post_id}`).text('Unlike').css({"color": "blue"});
+                            $(`.like-btn${post_id}`).append('<i class=" fas fa-thumbs-up"></i>')
+
+                            res = trimCount + 1
+                        }
+                        if (res == 1) {
+                            $(`.like-count${post_id}`).text(res + " " + "like for this post")
+                        } else {
+                            $(`.like-count${post_id}`).text(res + " " + "likes for this post")
+                        }
+
+
+
+
+                    },
+                    error: function(response) {
+                        console.log('error', response)
+                    }
+                })
+    })
+ });
+</script>
+{% endblock scripts %}
 
