--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -8,18 +8,25 @@
 
     <div class="col-sm">
         <div class="article-metadata">
-            <img src="https://cdn.pixabay.com/photo/2016/11/18/23/38/child-1837375_960_720.png" class="user-image-sm">
+            <a href="{% url 'users_posts' users_id=post.user.id %}">
+                <img src="{{ post.user.userprofile.user_image.url }}" class="user-image-sm">
+            </a>
             <a href="{% url 'users_posts' users_id=post.user.id %}">{{post.user}}</a>
-            <small class=" text-muted">{{ post.created }}</small>
-
-                <button class="like dropdown-detail" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-ellipsis-h"></i></button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                    <li><a class="dropdown-item" href="{% url 'post_update' pk=post.pk %}">Update post</a></li>
-                    <li><a class="dropdown-item" href="{% url 'post_publish' pk=post.pk %}">Publish post</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="red dropdown-item" href="{% url 'post_delete' pk=post.pk %}" onclick="return confirm('Are you sure?')" >Delete post</a></li>
-                </ul>
-
+            <small class=" text-muted">{{ post.created }} </small>
+            {% if post.published is not null and post.user == request.user %}
+                (published)
+            {% endif %}
+                {% if post.user == request.user %}
+                    <button class="like dropdown-detail" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-ellipsis-h"></i></button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                        <li><a class="dropdown-item" href="{% url 'post_update' pk=post.pk %}">Update post</a></li>
+                            {% if post.published is null %}
+                        <li><a class="dropdown-item" href="{% url 'post_publish' pk=post.pk %}">Publish post</a></li>
+                            {% endif %}
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="red dropdown-item" href="{% url 'post_delete' pk=post.pk %}" onclick="return confirm('Are you sure?')" >Delete post</a></li>
+                    </ul>
+                {% endif %}
         </div>
 
         <h1 class="h1-center" >{{ post.title }}</h1>
@@ -87,7 +94,7 @@
                 <div class="comments content-section row">
                     <div class="col-sm">
                         <div class="article-metadata">
-                            <img src="https://cdn.pixabay.com/photo/2016/11/18/23/38/child-1837375_960_720.png" class="user-image-sm">
+                            <img src="{{ post.user.userprofile.user_image.url }}" class="user-image-sm">
                             <a  href="">{{comment.author.username }}</a>
                             <small class=" text-muted">{{ comment.created }}</small>
                             <a href="{% url 'comment_delete' pk=comment.id %}">del</a>
