--- a/blog/templates/blog/users_posts.html
+++ b/blog/templates/blog/users_posts.html
@@ -6,8 +6,10 @@
 <div class="listing container mt-3">
     <div class="card" style="width: 18rem;">
   <div class="card-body">
-    <h5 class="card-title h5-center">{{user}}</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h5 class="card-title h5-center">{{users}}</h5>
+      {% if users.userprofile.about %}
+    <p class="card-text h5-center">{{ users.userprofile.about }}</p>
+      {% endif %}
 
   </div>
          <img src="https://cdn.pixabay.com/photo/2016/11/18/23/38/child-1837375_960_720.png" class="user-image-bg" alt="...">
@@ -18,18 +20,20 @@
 <br>
 
 <div class="listing container">
-    <h1 class="h1-center">Posts by {{user}}</h1>
+    <h1 class="h1-center">Posts by {{users}} ({{ user_post_count }})</h1>
     <hr>
-
+    <br>
     {% for post in posts %}
         <div class="content-section row">
                 <div class="col-1">
-                    <img src="https://cdn.pixabay.com/photo/2016/11/18/23/38/child-1837375_960_720.png" class="user-image">
+                    <a href="{% url 'users_posts' users_id=post.user.id %}">
+                        <img  src="{{ post.user.userprofile.user_image.url }}" class="user-image">
+                    </a>
                 </div>
 
                 <div class="col-11">
                     <div class="article-metadata">
-                        <a href="">{{post.user}}</a>
+                        <a href="{% url 'users_posts' users_id=post.user.id %}">{{post.user}}</a>
                         <small class="text-muted">{{ post.created }}</small>
                      </div>
 
@@ -37,23 +41,10 @@
                     <p class="article-content">{{ post.text }}</p>
                 </div>
 
-            <div class="comment-section">
-                <div class="like-count{{ post.id }}">{{ post.number_of_likes }} likes</div>
-                    {% if user.is_authenticated %}
-                        <form action="{% url 'post_likes' %}" method="POST" class="like-form" id="{{ post.id }}">
-                            {% csrf_token %}
-                            <input type="hidden" name="post_id" value="{{ post.id }}">
-                            <button type="submit" name="post_id" value="{{ post.id }}" class='btn btn-outline-primary like-btn{{post.id}}'>
-                                {% if profile not in post.likes.all %}
-                                    <text class="thumbs-down" >Like</text><i class="thumbs-down fas fa-thumbs-up"></i>
-                                {% else %}
-                                    <text>Unlike</text><i class="thumbs-up fas fa-thumbs-up"></i>
-                                {% endif %}
-                            </button>
-                        </form>
-                    {% endif %}
+                <div class="comment-section">
+                    <div class="like-count{{ post.id }}">{{ post.number_of_likes }} likes</div>
                 </div>
-            </div>
+        </div>
     {% endfor %}
 </div>
 
