--- a/user/templates/user/pass_reset_confirm.html
+++ b/user/templates/user/pass_reset_confirm.html
@@ -8,7 +8,7 @@
     <form method="post">
     {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Reset Password</legend>
+            <legend class="border-bottom mb-4">New password</legend>
             {{ form|crispy }}
         </fieldset>
         <br>
