--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -20,7 +20,7 @@
 
     <button type="submit" class="log_in_btn btn btn-primary">Submit</button>
                 <div class="up col-sm">
-                <a href="">Forgot Password?</a> · <a href="">Sign up</a>
+                <a href="{% url 'password_reset' %}">Forgot Password?</a> · <a href="{% url 'signup' %}">Sign up</a>
 </div>
 
             </form>
