--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,5 +1,5 @@
 {% extends 'blog/base.html' %}
-
+{% load crispy_forms_tags %}
 
 {% block content %}
 
@@ -9,57 +9,68 @@
 {% for post in posts %}
 
 <div class="content-section row">
-            <div class="col-1">
+            <div class="col-12 comment-sectionas">
             <a href="{% url 'users_posts' users_id=post.user.id %}">
                 <img src="{{ post.user.userprofile.user_image.url }}" class="user-image">
             </a>
-                </div>
-    <div class="col-11">
-        <div class="article-metadata">
+
+
+
             <a  href="{% url 'users_posts' users_id=post.user.id %}">{{post.user}}</a>
             <small class=" text-muted">{{ post.published }}</small>
-        </div>
 
+</div>
+<div class="col-12 comment-sections">
         <a class="article-title " href="{% url 'post_detail' pk=post.pk %}"><h1>{{ post.title }}</h1></a>
-            <p class="article-content">{{ post.text|truncatechars:400 }}</p>
+            <p class="article-content">{{ post.text|truncatechars:400 }}
+                {% if post.post_length > 400 %}<a href="{% url 'post_detail' pk=post.pk %}">(more)</a>{% endif %}
+            </p>
+    </div>
+
+    <div class="col-6 comment-sections">
+        <a class="margins-l" href="{% url 'post_detail' pk=post.pk %}#comments_post " >comments ({{ post.num_comments }})</a>
     </div>
     <div class="col-6 comment-sections">
         {% if post.number_of_likes == 1 %}
-            <div class="margins-l like-count{{ post.id }}">{{ post.number_of_likes }} like</div>
+            <div class="margins-c like-count{{ post.id }}">{{ post.number_of_likes }} like</div>
         {% else %}
-            <div class="margins-l like-count{{ post.id }}">{{ post.number_of_likes }} likes</div>
+            <div class="margins-c like-count{{ post.id }}">{{ post.number_of_likes }} likes</div>
         {% endif %}
-    </div>
-    <div class="col-6 comment-sections">
-        <a class="margins-c" href="{% url 'post_detail' pk=post.pk %}#comments_post " >comments ({{ post.num_comments }})</a>
     </div>
     <div class="col-12 comment-sections">
         {% if user.is_authenticated %}
-            <button class="cmt_btn margins-c btn btn-outline-secondary">comment</button>
-                <div class="comment-box">
-                    {% for c in obj.comment_set.all %}
-                        <div class="ui segment mb-5">
-                            <img class="ui avatar image" src={{c.user.avatar.url}}>
-                            <span>{{ c.user }}</span>
-                            <div class='mt-5'>{{ c.body }}</div>
-                        </div>
-                    {% endfor %}
-                </div>
-
 
                     <form action="{% url 'post_likes' %}" method="POST" class="like-form" id="{{ post.id }}">
                         {% csrf_token %}
                         <input type="hidden" name="post_id" value="{{ post.id }}">
-                        <button type="submit" name="post_id" value="{{ post.id }}" class='margins-l btn btn-outline-primary like-btn{{post.id}}'>
-                        {% if profile not in post.likes.all %}
+                        <button type="submit" name="post_id" value="{{ post.id }}" class='btn margins-c btn-outline-primary like-btn{{post.id}}'>
+
+                            {% if profile not in post.likes.all %}
                             <text class="thumbs-down" >Like</text><i class="thumbs-down fas fa-thumbs-up"></i>
                         {% else %}
                             <text>Unlike</text><i class="thumbs-up fas fa-thumbs-up"></i>
                         {% endif %}
                         </button>
+
                     </form>
+        <button class="cmt_btn margins-l btn btn-outline-secondary">comment</button>
                 {% endif %}
+
+
+        <div class="comment-box">
+            <div class="col-12 comment-sections">
+            <form action="" method="POST">
+                {% csrf_token %}
+                <input type="hidden" name="post_id" value="{{ post.id }}">
+                <button type="submit" class=" margins-cs btn btn-primary">Send</button>
+                {{ p_form|crispy }}
+
+            </form>
+        </div>
+            </div>
+
     </div>
+
 </div>
 
 
