--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,7 +6,7 @@
 <div class="listing container">
 
 
-{% for post in posts %}
+{% for post in page_obj %}
 
 <div class="content-section row">
             <div class="col-12 comment-sectionas">
@@ -71,12 +71,34 @@
 
     </div>
 
+
+
 </div>
 
 
 
 {% endfor %}
-
+    {% if page_obj.has_other_pages %}
+    <div class="col-12 pagination">
+        <ul class="pagination">
+            {% if page_obj.has_previous %}
+                <li><a href="?page=1" class="btn btn-outline-secondary">&laquo;</a></li>
+                <li><a href="?page={{ page_obj.previous_page_number }}" class="btn btn-outline-secondary">previous</a></li>
+            {% endif %}
+                {% for page in page_obj.paginator.page_range %}
+                    {% if page_obj.number == page %}
+                        <li class="btn btn-secondary">{{ page }}</li>
+                    {% elif page_obj.number < page|add:"3" and page_obj.number > page|add:"-3"  %}
+                        <li><a class="btn btn-outline-secondary" href="?page={{ page }}">{{ page }}</a></li>
+                    {% endif %}
+                {% endfor %}
+            {% if page_obj.has_next %}
+                <li><a href="?page={{ page_obj.next_page_number }}" class="btn btn-outline-secondary">next</a></li>
+                <li><a href="?page=4" class="btn btn-outline-secondary">&raquo;</a></li>
+            {% endif %}
+        </ul>
+    {% endif %}
+</div>
 </div>
 {% endblock %}
 
