--- a/blog/templates/blog/users_posts.html
+++ b/blog/templates/blog/users_posts.html
@@ -23,29 +23,51 @@
     <h1 class="h1-center">Posts by {{users}} ({{ user_post_count }})</h1>
     <hr>
     <br>
-    {% for post in posts %}
+    {% for post in page_obj %}
         <div class="content-section row">
-                <div class="col-1">
-                    <a href="{% url 'users_posts' users_id=post.user.id %}">
-                        <img  src="{{ post.user.userprofile.user_image.url }}" class="user-image">
-                    </a>
-                </div>
-
-                <div class="col-11">
-                    <div class="article-metadata">
-                        <a href="{% url 'users_posts' users_id=post.user.id %}">{{post.user}}</a>
-                        <small class="text-muted">{{ post.created }}</small>
-                     </div>
-
-                    <a class="article-title " href="{% url 'post_detail' pk=post.pk %}"><h1>{{ post.title }}</h1></a>
-                    <p class="article-content">{{ post.text }}</p>
-                </div>
-
-                <div class="comment-section">
-                    <div class="like-count{{ post.id }}">{{ post.number_of_likes }} likes</div>
-                </div>
+            <div class="col-12 comment-sectionas">
+                <a href="{% url 'users_posts' users_id=post.user.id %}">
+                    <img src="{{ post.user.userprofile.user_image.url }}" class="user-image">
+                </a>
+                <a  href="{% url 'users_posts' users_id=post.user.id %}">{{post.user}}</a>
+                <small class=" text-muted">{{ post.published }}</small>
+            </div>
+        <div class="col-12 comment-sections">
+            <a class="article-title " href="{% url 'post_detail' pk=post.pk %}"><h1>{{ post.title }}</h1></a>
+            <p class="article-content">{{ post.text|truncatechars:400 }}
+                {% if post.post_length > 400 %}<a href="{% url 'post_detail' pk=post.pk %}">(more)</a>{% endif %}
+            </p>
+        </div>
+            <div class="comment-sections">
+        {% if post.number_of_likes == 1 %}
+            <div class="margins-l like-count{{ post.id }}">{{ post.number_of_likes }} like</div>
+        {% else %}
+            <div class="margins-l like-count{{ post.id }}">{{ post.number_of_likes }} likes</div>
+        {% endif %}
+    </div>
         </div>
     {% endfor %}
+        {% if page_obj.has_other_pages %}
+    <div class="col-12 pagination">
+        <ul class="pagination">
+            {% if page_obj.has_previous %}
+                <li><a href="?page=1" class="btn btn-outline-secondary">&laquo;</a></li>
+                <li><a href="?page={{ page_obj.previous_page_number }}" class="btn btn-outline-secondary">previous</a></li>
+            {% endif %}
+                {% for page in page_obj.paginator.page_range %}
+                    {% if page_obj.number == page %}
+                        <li class="btn btn-secondary">{{ page }}</li>
+                    {% elif page_obj.number < page|add:"3" and page_obj.number > page|add:"-3"  %}
+                        <li><a class="btn btn-outline-secondary" href="?page={{ page }}">{{ page }}</a></li>
+                    {% endif %}
+                {% endfor %}
+            {% if page_obj.has_next %}
+                <li><a href="?page={{ page_obj.next_page_number }}" class="btn btn-outline-secondary">next</a></li>
+                <li><a href="?page=4" class="btn btn-outline-secondary">&raquo;</a></li>
+            {% endif %}
+        </ul>
+    {% endif %}
+</div>
 </div>
 
 
