--- a/blog/static/blog/blog.css
+++ b/blog/static/blog/blog.css
@@ -82,30 +82,35 @@ a {
     height: 100px;
     width: 100px;
     border-radius: 40px;
+    border: solid #8FBC8F 3px;
 }
 
 .user-image {
     height: 50px;
     width: 50px;
     border-radius: 40px;
+    border: solid #8FBC8F 1px;
 }
 .user-image-sm {
     height: 20px;
     width: 20px;
     border-radius: 40px;
+    border: solid #8FBC8F 1px;
 }
 
 .user-image-bg {
     margin: auto;
     height: 200px;
     width: 200px;
-    border-radius: 40px;
+    border-radius: 100px;
+    border: solid #8FBC8F;
 }
 
 .user-nav-image {
     height: 40px;
     width: 40px;
     border-radius: 40px;
+    border: solid #8FBC8F 1px;
 }
 
 
@@ -247,12 +252,12 @@ button a:hover {
 
 .narrow-select {
     margin-left: 10px;
-    width: 85%;
+    width: 87%;
 }
 
 .margins-cs {
-    float:right;
 
+    float:right;
 
 }
 
@@ -265,4 +270,9 @@ button a:hover {
 .pagination {
     padding-top: 20px;
     margin:auto;
+}
+
+.detail-like {
+
+    padding-bottom: 30px;
 }
