--- a/blog/templates/blog/comment_new.html
+++ b/blog/templates/blog/comment_new.html
@@ -8,10 +8,11 @@
 
 
     <h1>Create a comment</h1>
-    <form action="" method="post">
+    <form action="" method="POST">
         {% csrf_token %}
+        <button type="submit" class=" margins-cs btn btn-primary">Send</button>
         {{ form|crispy }}
-        <button class="btn btn-primary">Create</button>
+
     </form>
 
 </div>
